* Added Logic for Selecting organizer using Radio buttons and show list in alphabetically arranged * Made Class Game object which contains the game related variables such as players name, organizer name etc.

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,6 +8,5 @@
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textAppearance="?android:textAppearanceMedium"
-        android:textSize="30sp"
-        />
+        android:textSize="30sp" />
 </LinearLayout>
