--- a/app/src/main/res/layout/activity_add_or_delete_players.xml
+++ b/app/src/main/res/layout/activity_add_or_delete_players.xml
@@ -14,9 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="@string/app_name"
-        android:id="@+id/appName4"
-        android:textSize="40sp"
+        android:text="@string/text_add_all_name"
+        android:id="@+id/txtaddAllName"
+        android:textSize="18sp"
         android:textColor="#dfd50f"
         android:layout_weight="0.00" />
 
@@ -31,10 +31,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="59sp">
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="89sp">
+            android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/txtPlayerName"
@@ -48,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/button_add"
-                android:layout_toRightOf="@+id/txtInput"
+                android:layout_toRightOf="@+id/txtPlayerName"
                 android:textStyle="bold"
                 android:textColor="#ffffffff"
                 android:background="#e7241a"/>
@@ -58,13 +58,13 @@
         </LinearLayout>
     </LinearLayout>
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/list1"
         android:layout_width="match_parent"
-        android:layout_height="354dp"
-        android:layout_weight="0.84">
+        android:layout_height="wrap_content"
+        android:layout_weight="1.00">
     </ListView>
     <Button
-        android:id="@+id/button_next"
+        android:id="@+id/button_next1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_next"
